--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "styled-components": "^4.4.1",
     "uuid": "^3.2.1"
   },
   "keywords": [
@@ -49,6 +50,7 @@
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
     "prettier": "^1.15.3"
   }
 }
