--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
     "@types/styled-components": "^4.4.1",
     "prettier": "^1.15.3"
   }
