--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
       label: "Song"
-      name: "Song"
+      name: "song"
       widget: list
         - {label: "Title", name: "title", widget: "string"}
         - {label: "Song", name: "SongFile", widget: "file", required: false}
