--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -45,6 +45,17 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
+  - name: "review"
+    label: "Review"
+    folder: "src/pages/reviews"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "Reviews"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Slug", name: "slug", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
+
   - name: "studypages"
     label: "Study Pages"
     folder: "src/pages/study"
