--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "remark-html": "^10.0.0",
     "sanitize.css": "^11.0.0",
     "styled-components": "^4.4.1",
     "uuid": "^3.2.1"
