--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby-remark-images": "^3.1.6",
     "gatsby-remark-relative-images": "^0.2.1",
     "gatsby-source-filesystem": "^2.0.26",
+    "gatsby-transformer-md-opengraph": "0.0.5",
+    "gatsby-transformer-open-graph": "^2.1.4",
     "gatsby-transformer-remark": "^2.6.9",
     "gatsby-transformer-sharp": "^2.1.9",
     "lodash": "^4.17.15",
