--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -45,6 +45,15 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
+  - name: "PodCast"
+    label: "PodCast"
+    folder: "src/pages/podcasts"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "PodCast"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
+
   - name: "review"
     label: "Review"
     folder: "src/pages/reviews"
