--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,6 +53,7 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "PodCast"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Slug", name: "slug", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
 
   - name: "review"
