--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^2.1.2",
     "bulma": "^0.8.0",
+    "fs": "^0.0.1-security",
     "gatsby": "^2.13.31",
     "gatsby-image": "^2.0.23",
     "gatsby-plugin-netlify": "^2.0.6",
