--- a/plugins/gatsby-source-file/package.json
+++ b/plugins/gatsby-source-file/package.json
@@ -1,1 +1,14 @@
-{}
+{
+  "name": "npm-plugin-podcast",
+  "version": "0.0.1",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc -w"
+  },
+  "author": "June YAMAMOTO <jy@yambal.net> (https://www.yambal.net/)",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "mkdirp-then": "^1.2.0"
+  }
+}
