--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -54,6 +54,7 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "PodCast"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Slug", name: "slug", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
 
   - name: "review"
