--- a/plugins/gatsby-source-file/package.json
+++ b/plugins/gatsby-source-file/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "arraybuffer-to-buffer": "^0.0.7",
+    "get-mp3-duration": "^1.0.0",
     "mkdirp-then": "^1.2.0"
   }
 }
