--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "@google-cloud/text-to-speech": "^2.1.2",
+    "arraybuffer-to-buffer": "^0.0.7",
     "bulma": "^0.8.0",
     "fs": "^0.0.1-security",
     "gatsby": "^2.13.31",
