--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -52,6 +52,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "PodCast"}
+      - {label: "Channel", name: "channel", widget: "select", options: [{ label: "設定なし", value: null }]}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Slug", name: "slug", widget: "string"}
