--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -52,7 +52,7 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "PodCast"}
-      - {label: "Channel", name: "channel", widget: "select", required: false, options: [{ label: "設定なし", value: null }, { label: "テスト", value: "test" }]}
+      - {label: "Channel", name: "channel", widget: "select", required: false, options: [{ label: "設定なし", value: "notSet" }, { label: "テスト", value: "test" }]}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Slug", name: "slug", widget: "string"}
