--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
+    "node-html-to-image": "^1.1.0",
     "node-sass": "^4.11.0",
     "polished": "^3.4.2",
     "prop-types": "^15.6.0",
