--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "@google-cloud/text-to-speech": "^2.1.2",
     "bulma": "^0.8.0",
     "fs": "^0.0.1-security",
     "gatsby": "^2.13.31",
@@ -16,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-speach-podcast": "0.0.2",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
@@ -28,7 +28,6 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "marked": "^0.8.0",
-    "mkdirp-then": "^1.2.0",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
