--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sass": "^2.0.7",
     "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-speach-podcast": "0.0.2",
+    "gatsby-plugin-speach-podcast": "0.0.3",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-remark-copy-linked-files": "^2.0.7",
     "gatsby-remark-images": "^3.1.6",
@@ -58,6 +58,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/mkdirp": "^1.0.0",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
