--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-lines-ellipsis": "^0.14.1",
     "react-spring": "^8.0.27",
     "remark-html": "^10.0.0",
     "sanitize.css": "^11.0.0",
